Current
* add a multiple ("all-in-one") histogram plot for end optimums values
* add a simple GUI for tests and stats
* add a gaussian kernel estimation of the end optimums distribution in the solution space
* rename the plugins with more precises informations

Version 0.2.2
Date 5 february 2006
* the 'all' keyword can be used to launch all plugins
* added a report manager to show results in a html page with png images
* possibility of using several output file per plugin
* added a PNG output type
* new plugin : 2D distribution of the optimums positions, with optionnal PCA
* plots are considered as plugins

Version 0.2.1
Date 5 october 2005
* initial release (same version number as ometah)
* test module 
* several plots and report tools