@@ -1,0 +1,32 @@
+\documentclass{article}
+
+\usepackage{graphicx}
+
+\begin{document}
+
+\title{Open Metaheuristics Lab report}
+\author{Generated by oMetahLab}
+
+\maketitle
+
+#for $p in $plugins
+    \section{$p.name}
+    
+    $p.description 
+    
+    #for $i in $p.fileList        
+    
+        See figure \ref{$i}.
+    
+        \begin{figure}[htbp]
+            \begin{center}
+                \includegraphics[angle=-90,width=1.0\textwidth]{$i}
+            \end{center}        
+            \caption{}
+            \label{$i}
+        \end{figure}
+    #end for
+
+#end for
+
+\end{document}
